--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@babel/runtime": "^7.3.1",
     "@material-ui/core": "^3.9.2",
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
@@ -19,6 +21,7 @@
     "react": "^16.2.0",
     "react-art": "^16.8.1",
     "react-dom": "^16.2.0",
+    "react-google-maps-api": "^1.0.8",
     "react-native-web": "^0.10.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
