--- a/.gitignore
+++ b/.gitignore
@@ -9,14 +9,21 @@
 # production
 /build
 
-# misc
-.DS_Store
+# dotenv environment variables file
+.env
+
+# ignore package-lock as it complicates merging
+package-lock.json
+
+#misc
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 .env
+.vscode/
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
