--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "dependencies": {
     "@babel/runtime": "^7.3.1",
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@material/animation": "^0.41.0",
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.2",
+    "cheeseburger-menu": "0.0.13",
+    "classnames": "^2.2.6",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.3",
@@ -22,11 +26,14 @@
     "react-art": "^16.8.1",
     "react-dom": "^16.2.0",
     "react-google-maps-api": "^1.0.8",
+    "react-hamburger-menu": "^1.1.1",
+    "react-modal": "^3.8.1",
     "react-native-web": "^0.10.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-native": "^4.3.0",
     "react-scripts": "^2.0.3",
+    "reactjs-popup": "^1.3.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0"
