--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.3",
     "google-map-react": "^1.1.2",
+    "google-maps-react": "^2.0.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.4.1",
@@ -25,9 +26,8 @@
     "react": "^16.2.0",
     "react-art": "^16.8.1",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-google-maps-api": "^1.0.8",
-    "react-hamburger-menu": "^1.1.1",
-    "react-modal": "^3.8.1",
     "react-native-web": "^0.10.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
